image properly render to react app with image component

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
@@ -26,13 +26,16 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-hls-player": "^3.0.7",
     "react-player": "^2.15.1",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
+    "react-use-websocket": "^4.8.1",
     "socket.io-client": "^4.7.5",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "ws": "^8.16.0",
     "yup": "1.1.1"
   },
   "scripts": {
