--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # to change build folder directory
 BUILD_PATH='../backend/ftd'
+# If nothing else helps, add SKIP_PREFLIGHT_CHECK=true to an .env file in your project.
+# That would permanently disable this preflight check in case you want to proceed anyway.
+# SKIP_PREFLIGHT_CHECK=true
